# pdf-markdown-converter

./: .gitignore  README.md  Step-by-Step Guide to Creating a Virtual Environment with UV for Windows 11 and WSL2 Ubuntu 24.02.md  pyproject.toml  pytest.ini
docs/: Complete Guide to Migrating pdf-markdown-converter from Poetry to Uv.md  Migrating from Poetry to UV - A Comprehensive Guide-older.md
tests/: utils.py
tests/builders/: test_overriding_mp_skip.py
tests/data/: single_sheet.xlsx
